4. Категории в TODO List [#331991 #367640]